# triangle-rasterizer-demo

./: .gitignore  .gitmodules  CMakeLists.txt  license  readme.md  trd.ini  triangle-rasterizer-demo.sln  triangle-rasterizer-demo.vcxproj  triangle-rasterizer-demo.vcxproj.filters
art/: bunny.blend  earth.blend  room.blend  teapot.blend
data/ceiling/: ceiling.mtl
data/columns/: columns.mtl
data/dome/: dome.mtl
data/floor/: floor.mtl
data/holograms/bunny/: bunny.ini  bunny.mtl
data/holograms/earth/: earth.ini  earth.mtl
data/holograms/teapot/: teapot.ini  teapot.mtl
data/materials/: coffee-table.mtl  earth.mtl  sofa.mtl  test.mtl  window.mtl
data/projector/: projector.mtl
data/projector-blue/: projector-blue.mtl
data/projector-green/: projector-green.mtl
data/projector-red/: projector-red.mtl
data/step-front/: step-front.mtl
data/step-top/: step-top.mtl
data/trim/: trim.mtl
data/wall/: wall.mtl
projects/triangle-rasterizer-demo/src/: main.cpp
src/lodepng/: CMakeLists.txt  lodepng.vcxitems
src/tinyobjloader/: CMakeLists.txt  tinyobjloader.vcxitems
src/triangle-rasterizer-demo/: CMakeLists.txt  main.cpp  triangle-rasterizer-demo.vcxproj  triangle-rasterizer-demo.vcxproj.filters
src/triangle-rasterizer-demo/src/: main.cpp  trdAmbientLight.cpp  trdApp.cpp  trdApp.hpp  trdCamera.cpp  trdCamera.hpp  trdConfig.cpp  trdConfig.hpp  trdControlledCamera.hpp  trdCorner.hpp  trdDigitalInput.hpp  trdDirectionalLight.cpp  trdDirectionalLight.hpp  trdExternalLibraryException.hpp  trdFrameTimer.cpp  trdFrameTimer.hpp  trdHologramManager.cpp  trdHologramManager.hpp  trdInputState.cpp  trdInputState.hpp  trdInstructions.cpp  trdKey.hpp  trdLight.cpp  trdLight.hpp  trdLights.hpp  trdMesh.cpp  trdMesh.hpp  trdMeshMap.cpp  trdMissingFileException.hpp  trdModel.cpp  trdModel.hpp  trdPointLight.cpp  trdPointLight.hpp  trdRenderManager.cpp  trdRenderManager.hpp  trdRenderMode.hpp  trdRenderThread.cpp  trdRenderThread.hpp  trdScene.cpp  trdScene.hpp  (+13 more)
src/triangle-rasterizer-demo/trd/: trdAmbientLight.hpp  trdApp.cpp  trdApp.hpp  trdCamera.cpp  trdCamera.hpp  trdConfig.cpp  trdControlledCamera.cpp  trdControlledCamera.hpp  trdDirectionalLight.cpp  trdDirectionalLight.hpp  trdFont.hpp  trdFrameRateCounter.cpp  trdFrameRateCounter.hpp  trdFrameTimer.cpp  trdFrameTimer.hpp  trdHologramManager.cpp  trdHologramManager.hpp  trdInputState.cpp  trdInputState.hpp  trdInstructions.cpp  trdInstructions.hpp  trdInvalidFileException.hpp  trdKey.hpp  trdLight.cpp  trdLight.hpp  trdLightComponent.hpp  trdLights.cpp  trdLights.hpp  trdMesh.cpp  trdMesh.hpp  trdMeshMap.cpp  trdMeshMap.hpp  trdModel.cpp  trdModel.hpp  trdPointLight.cpp  trdPointLight.hpp  trdRenderManager.cpp  trdRenderManager.hpp  trdRenderMode.hpp  trdRenderThread.cpp  (+14 more)
